...
    android:layout_height="match_parent"
    tools:context=".ui.project.AddProjectFragment">

    <!-- TODO: Update blank fragment layout -->

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/confirmAddProjectBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="18dp"
        android:backgroundTint="#388E3C"
        android:clickable="true"
...
        android:focusable="auto"
        android:focusableInTouchMode="true"
        android:fontFamily="@font/aclonica"
        android:shadowColor="#252222"
        android:text="@string/txt_nombre_proyecto"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toBottomOf="@+id/ProjectNameEdit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.133"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.71"
        tools:ignore="MissingConstraints" />
...
        android:layout_height="wrap_content"
        android:layout_marginBottom="72dp"
        android:fontFamily="@font/aclonica"
        android:shadowColor="#0C0B0B"
        android:text="@string/txt_descripcion_proyecto"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toBottomOf="@+id/ProjectDescriptionEdit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.181"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.942"
        tools:ignore="MissingConstraints" />
...
